--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@dandre3000/thread",
-    "version": "0.1.0",
+  "version": "0.1.0",
   "license": "MIT",
   "author": {
-      "name": "DeAundre Payne",
-      "email": "apps.fondling796@passinbox.com",
-      "url": "https://github.com/dandre3000"
+    "name": "DeAundre Payne",
+    "email": "apps.fondling796@passinbox.com",
+    "url": "https://github.com/dandre3000"
   },
   "repository": {
     "type": "git",
@@ -22,18 +22,18 @@
   },
   "types": "./build/index.d.ts",
   "scripts": {
-    "build": "bun build --entrypoints ./src/browser.index.ts --outdir ./build --minify-whitespace --minify-syntax && bun build --entrypoints ./src/node.index.ts --outdir ./build --target node --minify-whitespace --minify-syntax",
+    "build": "bun build --entrypoints ./src/browser.index.ts --outdir ./build --external @dandre3000/is-main-thread --minify-whitespace --minify-syntax && bun build --entrypoints ./src/node.index.ts --outdir ./build --target node --external @dandre3000/is-main-thread --minify-whitespace --minify-syntax",
     "prepack": "bun run build"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.0",
+    "@types/bun": "^1.3.1",
     "@types/deno": "^2.5.0",
     "@types/node": "^24.9.1",
     "typescript": "^5.9.3",
-    "vite": "^7.1.11"
+    "vite": "^7.1.12"
   },
   "dependencies": {
-    "@dandre3000/is-main-thread": "^1.1.0"
+    "@dandre3000/is-main-thread": "^1.1.2"
   },
   "type": "module"
 }
