--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dandre3000/thread",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "license": "MIT",
   "author": {
     "name": "DeAundre Payne",
@@ -46,14 +46,18 @@
     "build-browser": "tsc -p tsconfig.node.json && bun build --entrypoints ./src/browser.index.ts --outdir ./build --external @dandre3000/is-main-thread --minify-whitespace --minify-syntax",
     "build-node": "tsc -p tsconfig.browser.json && bun build --entrypoints ./src/node.index.ts --outdir ./build --target node --external @dandre3000/is-main-thread --minify-whitespace --minify-syntax",
     "build": "bun run build-node && bun run build-browser",
-    "prepack": "bun run build"
+    "test-node": "node --test ./tests/node.test.js",
+    "test-bun": "bun test ./tests/bun.node.test.js && bun test ./tests/bun.browser.test.js",
+    "test-deno": "deno test ./tests/deno.node.test.js ./tests/deno.browser.test.js --no-check --allow-read",
+    "test": "bun run test-node && bun run test-bun && bun run test-deno",
+    "prepack": "bun run build && bun run test"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.1",
+    "@types/bun": "^1.3.4",
     "@types/deno": "^2.5.0",
-    "@types/node": "^24.9.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.12"
+    "@types/node": "^24.10.4",
+    "expect": "^30.2.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@dandre3000/is-main-thread": "^1.1.2"
