Use tsconfig skipLibCheck for @types/node and @types/bun conflict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "moduleResolution": "bundler",
         "declaration": true,
         "declarationDir": "./build",
-        "emitDeclarationOnly": true
+        "emitDeclarationOnly": true,
+        "skipLibCheck": true
     }
 }
